--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,8 +78,8 @@ nav ul {
   background-color: var(--dark-color);
   font-family: var(--sans-text);
   color: var(--light-color);
-  font-size: 1.25rem;
-  padding: 1.25rem;
+  font-size: 1.05rem;
+  padding: 1.05rem;
   list-style-type: none;
 }
 
@@ -181,6 +181,7 @@ body h1{
 }
 
 .upgrade-parts div a{
+  display: block;
   font-family: var(--sans-text2);
   color: white;
   text-decoration: none;
@@ -204,6 +205,11 @@ body h1{
   body{
       background-image: url('../images/site/checkerboard.jpg');
     }
+
+  nav ul{
+    font-size: 1.10rem;
+    padding: 1.10rem;
+  }
 
   #wrapper {
     background-color: white;
@@ -261,8 +267,9 @@ body h1{
   }
 
   nav ul{
+    
     font-size: 1.25rem;
-    padding: 1rem;
+    padding: 1.25rem;
   }
 
   .pop-up{
