--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h1>Welcome to CSE Motors!</h1>
+    <%- messages() %>
 <div class="banner">
     <picture>
         <source srcset="/images/vehicles/delorean-tn.jpg" media="(max-width: 400px)">
