--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -206,8 +206,9 @@ body h1{
   font-size: 1.15rem;
   padding: 1rem;
 }
-
-/* -------Dynamic Pages------- */
+/* ================================================ */
+/*                    DYNAMIC PAGES                 */
+/* ================================================ */
 
 #mainHeader{
   font-family: var(--serif-text);
@@ -283,8 +284,54 @@ body h1{
   font-size: 1.25rem;
   font-family: var(--sans-text);
 }
+/* ================================================ */
+/*                   ACCOUNT PAGE
+/* ================================================ */
+
+#loginForm {
+  background-color: #247ABD;
+  margin: 0 auto;
+  text-align: center;
+  max-width: 20rem;
+}
+
+#loginForm input{
+  padding: 0.5rem 1rem;
+}
+
+.above, #submit {
+  display: block;
+  margin: 0 auto;
+}
+
+#submit {
+  margin: 1rem auto;
+  padding: 0.5rem;
+  font-family: var(--sans-text);
+}
+
+.above{
+  padding: 1rem 0 0.25rem;
+  font-family: var(--sans-text);
+  color: white;
+}
+
+#loginForm p{
+  padding: 1rem;
+  font-family: var(--sans-text);
+  color: white;
+}
+
+#loginForm p a {
+  text-decoration: none;
+  font-weight: 700;
+  color: white;
+}
 
 
+/* ================================================ */
+/*                   MEDIA QUERIES
+/* ================================================ */
 /* ======= MEDIUM MEDIA SCREENS ======== */
 @media only screen and (min-width: 30em){
 
