--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -288,10 +288,15 @@ body h1{
 /*                   ACCOUNT PAGE
 /* ================================================ */
 
-#loginForm {
+.form {
   background-color: #247ABD;
   margin: 0 auto;
   text-align: center;
+  font-family: var(--sans-text);
+  color: white;
+}
+
+#loginForm {
   max-width: 20rem;
 }
 
@@ -307,18 +312,18 @@ body h1{
 #submit {
   margin: 1rem auto;
   padding: 0.5rem;
-  font-family: var(--sans-text);
+  /* font-family: var(--sans-text); */
 }
 
 .above{
   padding: 1rem 0 0.25rem;
-  font-family: var(--sans-text);
+  /* font-family: var(--sans-text); */
   color: white;
 }
 
 #loginForm p{
   padding: 1rem;
-  font-family: var(--sans-text);
+  /* font-family: var(--sans-text); */
   color: white;
 }
 
@@ -328,6 +333,34 @@ body h1{
   color: white;
 }
 
+/* ================================================ */
+/*                 REGISTRATION PAGE
+/* ================================================ */
+
+#registerForm {
+  margin: 0 auto;
+  padding: 2rem;
+  max-width: 20rem;
+  border-radius: 10px;
+}
+
+#registerForm input{
+  width: 15rem;
+  padding: 0.50rem 0;
+  border-radius: 5px;
+}
+
+#registerSubmit {
+  display: block;
+  padding: 0.5 1rem;
+  margin: 1rem auto;
+  
+
+}
+
+label.above {
+  text-align: left;
+}
 
 /* ================================================ */
 /*                   MEDIA QUERIES
