--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -7,12 +7,12 @@
 <% messages() %>
 
 <form>
-    <div id="loginForm">
-        <label for="email" class="above label">Email</label>
+    <div class="form" id="loginForm">
+        <label for="account_email" class="above label">Email</label>
         <input type="email" id="email" name="account_email" required>
-        <label for="password" class="above label">Password</label>
+        <label for="account_password" class="above label">Password</label>
         <input type="password" id="password" name="account_password" required>
         <input type="submit" id="submit" value="Login">
-        <p>No account? <a href="#">Sign Up</a></p>
+        <p>No account? <a href="/account/register">Sign Up</a></p>
     </div>
 </form>
