--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -4,14 +4,15 @@
         res.redirect('/')
     } %>
 
-<% messages() %>
+<%- messages() %>
 
 <form>
     <div class="form" id="loginForm">
         <label for="account_email" class="above label">Email</label>
         <input type="email" id="email" name="account_email" required>
         <label for="account_password" class="above label">Password</label>
-        <input type="password" id="password" name="account_password" required>
+        <input type="password" id="password" name="account_password" required
+        pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
         <input type="submit" id="submit" value="Login">
         <p>No account? <a href="/account/register">Sign Up</a></p>
     </div>
