--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -4,9 +4,9 @@
         res.redirect('/')
     } %>
 
-<% messages() %>
+<%- messages() %>
 
-<form id="registerForm">
+<form id="registerForm" action="/account/register" method="post">
     <div class="form" id="registerInput">
         <label class="above label" for="account_firstname">First Name</label>
         <input class="input" type="text" name="account_firstname" placeholder="Doc" required>
@@ -15,7 +15,9 @@
         <label class="above label" for="account_email">Email Address</label>
         <input class="input" type="email" name="account_email" placeholder="therearenoroads@future.com" required>
         <label for="account_password" class="above label">Password</label>
-        <input class="input" type="password" name="account_password" minlength="12" required>
+        <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital, and 1 special character</span>
+        <input class="input" type="password" name="account_password" minlength="12" required
+        pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$".>
         <input class="input" type="submit" id="registerSubmit" value="Register">
     </div>
 </form>
