--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -6,7 +6,7 @@
 
 <%- messages() %>
 
-<form>
+<form id="logForm" action="/account/login" method="post">
     <div class="form" id="loginForm">
         <label for="account_email" class="above label">Email</label>
         <input type="email" id="email" name="account_email" required>
