--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -385,6 +385,23 @@ body h1{
 }
 
 /* ================================================ */
+/*                 MANAGEMENT PAGE
+/* ================================================ */
+
+.management a{ 
+  display: block;
+  font-family: var(--sans-text);
+  font-size: 1.35 rem;
+  padding: 1rem;
+}
+
+.management {
+  padding: 1rem;
+  display: block;
+  text-align: center;
+}
+
+/* ================================================ */
 /*                   MEDIA QUERIES
 /* ================================================ */
 /* ======= MEDIUM MEDIA SCREENS ======== */
