--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -348,6 +348,10 @@ body h1{
   border-left:green solid 6px;
 }
 
+.form textarea {
+  font-family: var(--sans-text2);
+}
+
 /* ================================================ */
 /*                 REGISTRATION PAGE
 /* ================================================ */
@@ -425,9 +429,6 @@ body h1{
   text-align: left;
 }
 
-.left{
-  display: inline;
-}
 #classificationList{
   margin-left: .5rem;
   padding: .5rem;
@@ -449,7 +450,7 @@ body h1{
   border-radius: 5px;
 }
 
-#classSubmit {
+#classSubmit, #invSubmit {
   display: block;
   margin: 0 auto;
   padding: 0.5rem;
@@ -457,6 +458,22 @@ body h1{
   border: none;
   font-family: var(--sans-text2);
 }
+
+
+
+/* ================================================ */
+/*       EDIT CLASSIFICATION/INVENTORY PAGES
+/* ================================================ */
+
+.editForm {
+  max-width: 40rem;
+}
+
+#classificationList {
+  display: block;
+  text-align: left;
+}
+
 
 /* ================================================ */
 /*                   MEDIA QUERIES
