--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -35,19 +35,19 @@
         <label class='above' for=inv_description>Description</label>
         <textarea name=inv_description rows=4><%= locals.inv_description %></textarea>
     
-        <label for=inv_image>Image Path</label>
+        <label class='above' for=inv_image>Image Path</label>
         <input type='text' placeholder='e.g. docs/image.png' name='inv_image' value="<%= locals.inv_image %>" required> 
     
-        <label for=inv_thumbnail>Thumbnail Path</label>
+        <label class='above' for=inv_thumbnail>Thumbnail Path</label>
         <input type='text' placeholder='e.g. docs/image_thumbnail.png' name='inv_thumbnail' value="<%= locals.inv_thumbnail %>" required> 
     
-        <label for=inv_price>Price</label>
+        <label class='above' for=inv_price>Price</label>
         <input type='text' placeholder='No Commas or Decimals' pattern=^(0|[1-9][0-9]*)$ name='inv_price' value="<%= locals.inv_price %>" required> 
     
-        <label for=inv_miles>Miles</label>
+        <label class='above' for=inv_miles>Miles</label>
         <input type='text' placeholder='No Commas' name='inv_miles' pattern=^(0|[1-9][0-9]*)$ value="<%= locals.inv_miles %>" required> 
     
-        <label for=inv_color>Color</label>
+        <label class='above' for=inv_color>Color</label>
         <input type='text' placeholder='No Commas' name='inv_color' value="<%= locals.inv_color %>" required> 
     
     </fieldset>
