--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -24,16 +24,16 @@
         <%- form %>
             
         <label class='above' for=inv_make>Make</label>
-        <input id=addMake type='text' placeholder='Min 3 Characters' name='inv_make' required value="<%= locals.inv_make %>"> 
+        <input id=addMake type='text' placeholder='Min 3 Characters' name='inv_make' pattern='{3,}'required value="<%= locals.inv_make %>"> 
     
         <label class='above' for=inv_model>Model</label>
-        <input type='text' placeholder='Min 3 Characters' name='inv_model' value="<%= locals.inv_model %>" required> 
+        <input type='text' placeholder='Min 3 Characters' name='inv_model' pattern='{3,}' value="<%= locals.inv_model %>" required> 
             
         <label class='above' for=inv_year>Year</label>
-        <input type='number' placeholder='4-digit year' name='inv_year' value="<%= locals.inv_year %>" required> 
+        <input type='text' placeholder='4-digit year' name='inv_year' pattern='[0-9]{4}'value="<%= locals.inv_year %>" required> 
             
         <label class='above' inv_description>Description</label>
-        <textarea name=inv_description rows=4></textarea>
+        <textarea name=inv_description rows=4 required><%= locals.inv_description %></textarea>
     
         <label for=inv_image>Image Path</label>
         <input type='text' placeholder='e.g. docs/image.png' name='inv_image' value="<%= locals.inv_image %>" required> 
