--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -419,7 +419,7 @@ body h1{
   color: white;
 }
 
-#addClassForm {
+#updateForm {
   font-weight: 500;
   font-size: 1.25rem;
 }
@@ -436,7 +436,7 @@ body h1{
   font-family: var(--sans-text2);
 }
 
-#addClassForm input[type=text], input[type=number]{
+#updateForm input[type=text], input[type=number]{
   display: inline;
   width: 100%;
   margin-bottom: 20px;
@@ -445,7 +445,7 @@ body h1{
   border: none;
 }
 
-#addClassForm textarea {
+#updateForm textarea {
   width: 100%;
   border-radius: 5px;
 }
