--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -461,19 +461,24 @@ body h1{
   font-family: var(--sans-text2);
 }
 
-#addClassForm, #updateForm input[type=text], input[type=number], #newClassName{
+#addClassForm, #updateForm, #deleteForm {
+
+  input[type=text], input[type=number], #newClassName{
   display: inline;
   width: 100%;
   margin-bottom: 20px;
   padding: .5rem;
   border-radius: 5px;
   border: none;
-}
+}}
 
-#addClassForm, #updateForm textarea {
+#addClassForm, #updateForm, #deleteForm {
+
+ textarea {
+  font-family: var(--sans-text2);
   width: 100%;
   border-radius: 5px;
-}
+}}
 
 #classSubmit, #invSubmit {
   display: block;
