--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,14 @@
       <a href="/" title="Return to home page">New Motors</a>
     </span>
     <div id="tools">
-      <a title="Click to log in" href="/account/login">My Account</a>
-    </div>
-</header>
+      <% if (locals.loggedin = true) { %>
+        <a href="/account">Welcome User</a>
+        <a href="/account/logout">Logout< </a>
+      <% } else if (locals.loggedin = false) { %>
+        <a title="Click to log in" href="/account/login">My Account</a>
+      <% } %>
+    
+      </div>
+
+
+  </header>
