--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -16,4 +16,13 @@
     </ul>
 <% } %>
 
-<h2>You're logged in</h2>
+
+
+<div class="invManage">
+    <h2>Welcome <%= locals.accountData.account_firstname %></h2>
+    <p>You're logged in</p>
+    <div class="manageButton">
+        <a id="editAccountLink" href="/account/update/<%= locals.accountData.account_id %>">Edit Account Information</a>
+    </div>
+    <%- accountStatus %>
+</div>
