--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -461,9 +461,9 @@ body h1{
   font-family: var(--sans-text2);
 }
 
-#addClassForm, #updateForm, #deleteForm {
+#addClassForm, #updateForm, #deleteForm, .generalForm {
 
-  input[type=text], input[type=number], #newClassName{
+  input[type=text], input[type=number], #newClassName, input[type=email], input[type=password]{
   display: inline;
   width: 100%;
   margin-bottom: 20px;
@@ -472,7 +472,7 @@ body h1{
   border: none;
 }}
 
-#addClassForm, #updateForm, #deleteForm {
+#addClassForm, #updateForm, #deleteForm, .generalForm {
 
  textarea {
   font-family: var(--sans-text2);
@@ -480,7 +480,7 @@ body h1{
   border-radius: 5px;
 }}
 
-#classSubmit, #invSubmit {
+#classSubmit, #invSubmit, .submitButton {
   display: block;
   margin: 0 auto;
   padding: 0.5rem;
@@ -489,7 +489,9 @@ body h1{
   font-family: var(--sans-text2);
 }
 
-
+#pswdUpdateForm{
+  margin-top: 1rem;
+}
 
 /* ================================================ */
 /*       EDIT CLASSIFICATION/INVENTORY PAGES
@@ -504,13 +506,6 @@ body h1{
   font-size: 0.7rem;
 }
 
-/* #newClassName{
-  display: block;
-  width: 100%;
-  border-radius: 5px;
-  padding: 0.5rem;
-  margin-top: 0.35rem;
-} */
 
 #classificationList {
   display: block;
@@ -556,6 +551,19 @@ body h1{
 #invHead{
   font-family: var(--serif-text);
 }
+
+    /*------- Update Account Information -------*/
+
+  .generalForm {
+    background-color: #247ABD;
+    margin: 0 auto;
+    font-family: var(--sans-text);
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+    max-width: 80%;
+    padding: 1rem;
+  }
 
 /* ================================================ */
 /*                   MEDIA QUERIES
