--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -22,7 +22,7 @@
     <h2>Welcome <%= locals.accountData.account_firstname %></h2>
     <p>You're logged in</p>
     <div class="manageButton">
-        <a id="editAccountLink" href="/account/update/<%= locals.accountData.account_id %>">Edit Account Information</a>
+        <a id="editAccountLink" href="/account/update/">Edit Account Information</a>
     </div>
     <%- accountStatus %>
 </div>
