Completed Logout fix

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,12 @@
       <a href="/" title="Return to home page">New Motors</a>
     </span>
     <div id="tools">
-      <% if (locals.loggedin = true) { %>
-        <a href="/account">Welcome User</a>
-        <a href="/account/logout">Logout< </a>
-      <% } else if (locals.loggedin = false) { %>
+      <% if (!locals.loggedin) { %>
         <a title="Click to log in" href="/account/login">My Account</a>
+      <% } else if (locals.loggedin) { %>
+        <a href="/account">Welcome User</a>
+        <br>
+        <a href="/account/logout">Logout</a>
       <% } %>
     
       </div>
