--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -17,7 +17,7 @@
 <div class='addClass'>
 <p>All Fields are Required</p>
 
-<form id='addClassForm' method='post' action='/inv/add-inventory'>
+<form id='addClassForm'class='form' method='post' action='/inv/add-inventory'>
     <fieldset>
         <label class='above classificationLabel' for='classification_name'>Classification</label>    
         
