--- a/views/inventory/delete-confirm.ejs
+++ b/views/inventory/delete-confirm.ejs
@@ -17,7 +17,7 @@
 <div class='deleteClass'>
 <p>All Fields are Required</p>
 
-<form id='deleteForm' class="form deleteForm" method='post' action='/inv/delete'>
+<form id='deleteForm' class="form" method='post' action='/inv/delete'>
     <fieldset>
         <p>Confirm Deletion -- The delete is permanent.</p>
             
