--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -17,7 +17,7 @@
 <div class='updateClass'>
 <p>All Fields are Required</p>
 
-<form id='updateForm' class="form editForm" method='post' action='/inv/update'>
+<form id='updateForm' class="form" method='post' action='/inv/update'>
     <fieldset>
         <label class='above' for='classification_name'>Classification</label>
         
